--- a/dude-graph.html
+++ b/dude-graph.html
@@ -283,7 +283,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                         "name": name,
                         "icon": "fa fa-circle",
                         "data": {
-                            "blockType": "Variable",
+                            "blockType": "VariableBlock",
                             "blockValueType": type,
                             "blockValue": value,
                             "blockName": name,
