--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -2,7 +2,7 @@
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-a11y-keys-behavior/iron-a11y-keys-behavior.html">
 <link rel="import" href="../dude-popup/dude-popup.html">
 <link rel="import" href="../dude-hierarchy/dude-hierarchy.html">
@@ -18,6 +18,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 @demo demo/index.html
 -->
 <dom-module id="dude-graph-editor">
+    <style include="iron-flex"></style>
     <style>
         /**
          * SVG viewport
