--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <!-- firefox didn't for without adding this links in the index -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" type="text/css">
-    <link rel="import" href="../bower_components/dude-style/dude-style.html">
     <link rel="import" href="audigame/audigame.html">
 </head>
-<body class="fullbleed">
-    <demo-audigame></demo-audigame>
+<body style="height: 100vh; margin: 0">
+<demo-audigame style="height: 100%"></demo-audigame>
 </body>
 </html>
