--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="import" href="../iron-component-page/iron-component-page.html">
 </head>
 <body>
-<iron-component-page src="dude-graph-editor.html"></iron-component-page>
+<iron-component-page src="dude-graph.html"></iron-component-page>
 </body>
 </html>
